--- a/koha-tmpl/intranet-tmpl/default/de/authorities/authorities-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/authorities/authorities-home.tmpl
@@ -1,7 +1,7 @@
     <!-- TMPL_INCLUDE NAME="auth-top.inc" -->
 <div id="mainbloc">
 
-<h1 class="authority">Authority search</h1>
+<h1 class="authority">Autorit&auml;tensuche</h1>
 
 <form name="f" method="post">
 	<input type="hidden" name="op" value="do_search">
@@ -18,25 +18,25 @@
 			</select>
 		</h2>
 		<p>
-			<label class="label100">Main entry</label>
+			<label class="label100">Haupteintrag</label>
 			<input type="text" name="value" value="<!-- TMPL_VAR NAME="value" -->">
 			<input type="hidden" name="marclist" value="mainentry">
 			<input type="hidden" name="and_or" value="and">
 			<input type="hidden" name="excluding" value="">
 			<select name="operator">
-				<option value="contains">contains</option>
-				<option value="start">start by</option>
+				<option value="contains">enth&auml;lt</option>
+				<option value="start">starten mit</option>
 			</select>
 		</p>
 		<p>
-			<label class="label100">Anywhere</label>
+			<label class="label100">Irgendwo</label>
 			<input type="text" name="value" value="<!-- TMPL_VAR NAME="value" -->">
 			<input type="hidden" name="marclist" value="">
 			<input type="hidden" name="and_or" value="and">
 			<input type="hidden" name="excluding" value="">
 			<select name="operator">
-				<option value="contains">contains</option>
-				<option value="start">start by</option>
+				<option value="contains">enth&auml;lt</option>
+				<option value="start">starten mit</option>
 			</select>
 		</p>
 		<p>
