--- a/koha-tmpl/intranet-tmpl/default/de/authorities/searchresultlist.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/authorities/searchresultlist.tmpl
@@ -1,6 +1,6 @@
 <!-- TMPL_INCLUDE NAME="auth-top.inc" -->
 <div id="mainbloc">
-	<h1 class="authority">Authority search results</h1>
+	<h1 class="authority">Autorit&auml;ten-Suchergebnisse</h1>
 	<div id="resultnumber">
 		<p>
 			<!-- TMPL_IF name="displayprev" -->
@@ -35,7 +35,7 @@
 		<table>
 			<tr>
 				<th class="authority">Zusammenfassung</th>
-				<th class="authority">Used in</th>
+				<th class="authority">Verwendet in</th>
 				<th class="authority">Zeige</th>
 				<th class="authority">L&ouml;schen</th>
 			</tr>
