--- a/koha-tmpl/intranet-tmpl/default/de/authorities/authorities.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/authorities/authorities.tmpl
@@ -4,9 +4,9 @@
 <div class="tabbed">
 	<form method="post" name="f">
 	<!-- TMPL_IF name="authid" -->
-		<h1 class="authority">Modify authority #<!-- TMPL_VAR NAME="authid" --> (<!-- TMPL_VAR name="authtypetext" -->)</h1>
+		<h1 class="authority">Autorit&auml;t &auml;ndern<!-- TMPL_VAR NAME="authid" --> (<!-- TMPL_VAR name="authtypetext" -->)</h1>
 	<!-- TMPL_ELSE -->
-		<h1 class="authority">Adding authority (<!-- TMPL_VAR name="authtypetext" -->)</h1>
+		<h1 class="authority">Autorit&auml;t hinzuf&uuml;gen (<!-- TMPL_VAR name="authtypetext" -->)</h1>
 	<!-- /TMPL_IF -->
 	<p>
 		<input type="hidden" name="op" value="add">
@@ -14,9 +14,9 @@
 		<input type="hidden" name="authtypecode" value="<!-- TMPL_VAR NAME="authtypecode" -->">
 		<input type="hidden" name="authid" value="<!-- TMPL_VAR NAME="authid" -->">
 		<!-- TMPL_IF name="authid" -->
-			<input type="button" value="Save" onClick="Check(this.form)" accesskey="w" class="button authority">
+			<input type="button" value="Speichern" onClick="Check(this.form)" accesskey="w" class="button authority">
 		<!-- TMPL_ELSE -->
-			<input type="button" value="Add authority" onClick="Check(this.form)" accesskey="w" class="button authority">
+			<input type="button" value="Autorit&auml;t hinzuf&uuml;gen" onClick="Check(this.form)" accesskey="w" class="button authority">
 		<!-- /TMPL_IF -->
 	</p>
 </div>
@@ -24,11 +24,11 @@
 <br><br><br><br><br><br><br><br><br><br><br>
 <!-- TMPL_IF name="duplicateauthid" -->
 	<div class="problem">
-		<p>Duplicate suspected with <a href='javascript:openWindow("detail.pl?authid=<!-- TMPL_VAR name="duplicateauthid" -->&popup=1", "Duplicate Authority")' class="button authority"><!-- TMPL_VAR name="duplicateauthvalue" --></a></p>
-		<p>You must either :</p>
+		<p>Duplikat vermutlich mit <a href='javascript:openWindow("detail.pl?authid=<!-- TMPL_VAR name="duplicateauthid" -->&popup=1", "Duplicate Authority")' class="button authority"><!-- TMPL_VAR name="duplicateauthvalue" --></a></p>
+		<p>Sie m&uuml;sen entweder :</p>
 		<ul>
-			<p><input type="checkbox" value=1 name="confirm_not_duplicate">confirm it's not a duplicate (and click on <input type="button" value="Add authority" onClick="Check(this.form)" accesskey="w" class="button authority"> again)</p>
-			<p>Go to <a href="authorities.pl?authid=<!-- TMPL_VAR name="duplicateauthid" -->" >original authority</a></p>
+			<p><input type="checkbox" value=1 name="confirm_not_duplicate">best&auml;tigen, da&szlig; es kein Duplikat ist (und auf den Button <input type="button" value="Autorit&auml;t hinzuf&uuml;gen" onClick="Check(this.form)" accesskey="w" class="button authority"> klicken)</p>
+			<p>oder zur <a href="authorities.pl?authid=<!-- TMPL_VAR name="duplicateauthid" -->" >originalen Autorit&auml;t gehen</a></p>
 		</ul>
 	</div>
 <!-- /TMPL_IF -->
@@ -144,10 +144,10 @@ function Check(f) {
 	var total_errors = total_missing_mandatory_tags + total_missing_mandatory_subfields;
 	var alertString2;
 	if (total_errors!=0) {
-		alertString2  = _("Form not submitted because of the following problem(s)");
+		alertString2  = _("Daten wegen der folgenden Probleme nicht gespeichert");
 		alertString2 += "\n------------------------------------------------------------------------------------\n";
-		alertString2 += "\n- "+ total_missing_mandatory_tags +_(" mandatory tags empty");
-		alertString2 += "\n- "+ total_missing_mandatory_subfields +_(" mandatory fields empty (see bold subfields)");
+		alertString2 += "\n- "+ total_missing_mandatory_tags +_(" Pflichttag leer");
+		alertString2 += "\n- "+ total_missing_mandatory_subfields +_(" Pflichttags leer (siehe fett abgebildete Subfields)");
 		alert(alertString2);
 	} else {
 		document.forms[1].submit();
