--- a/koha-tmpl/intranet-tmpl/default/de/authorities/detail-biblio-search.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/authorities/detail-biblio-search.tmpl
@@ -1,7 +1,7 @@
 <!-- TMPL_INCLUDE NAME="auth-top.inc" -->
 <link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR NAME="themelang" -->/includes/marc-editor.css">
 <div class="tabbed">
-	<h1 class="authority">Authority number : <!-- TMPL_VAR NAME="authid" --></h1>
+	<h1 class="authority">Autorit&auml;tsnummer : <!-- TMPL_VAR NAME="authid" --></h1>
 	<a href="authorities.pl?authid=<!-- TMPL_VAR NAME="authid" -->">
 		<img border="0" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/fileopen.png">
 	</a>
@@ -38,7 +38,7 @@
 <script language="JavaScript" type="text/javascript">
 
 function confirm_deletion() {
-	var is_confirmed = confirm('Are you sure you want to delete this biblio?');
+	var is_confirmed = confirm('Sind Sie sicher, da&szlig Sie diesen Biblio l&ouml;schen wollen?');
 	if (is_confirmed) {
 		window.location="acqui.simple/addbiblio.pl?op=delete&amp;bibid=<!-- TMPL_VAR NAME="bibid" -->";
 	}
