theres a leftbloc. Why not a rightbloc? There is now.

--- a/koha-tmpl/opac-tmpl/css/en/includes/opac.css
+++ b/koha-tmpl/opac-tmpl/css/en/includes/opac.css
@@ -311,7 +311,11 @@ select:hover {
 	width:30%;
 	border:0;
 }
-
+#rightbloc {
+	float:right;
+	width:40%;
+	border:0;
+}
 #bottombloc {
 	width:100%;
 	height:200%;
