Synching with rel_2_2.

--- a/koha-tmpl/intranet-tmpl/npl/en/bull/statecollection.tmpl
+++ b/koha-tmpl/intranet-tmpl/npl/en/bull/statecollection.tmpl
@@ -69,6 +69,16 @@
 					<!-- TMPL_ELSE -->
 						<option value="4">Missing</option>
 					<!-- /TMPL_IF -->
+					<!--TMPL_IF name="status5" -->
+						<option value="5" selected>Not issued</option>
+					<!-- TMPL_ELSE -->
+						<option value="5">Not issued</option>
+					<!-- /TMPL_IF -->
+					<!--TMPL_IF name="status6" -->
+						<option value="6" selected>Delete</option>
+					<!-- TMPL_ELSE -->
+						<option value="6">Delete</option>
+					<!-- /TMPL_IF -->
 				</select>
 			</td>
 		</tr>
