--- a/koha-tmpl/intranet-tmpl/npl/en/members/member.tmpl
+++ b/koha-tmpl/intranet-tmpl/npl/en/members/member.tmpl
@@ -4,15 +4,17 @@
 <!-- TMPL_INCLUDE NAME="intranet-nav.inc" -->
 
 <div id="main">
-<div class="table"><table>
-	<caption>Patron Search Results</caption>
+    <h3>Results for Search: <span class="ex"><!-- TMPL_VAR NAME="member" --></span></h3>
+	<div class="results"><!-- TMPL_VAR Name ="numresults" --> patrons found.</div>
+<table>
   <tr>
+  	<th>&nbsp;</th>
     <th>Card</th>
     <th>Name</th>
     <th>Cat</th>
     <th>Address</th>
     <th>OD/Issues</th>
-<!--     <th>Charges</th> -->
+	<!-- Hide from NPL --><th>Charges</th><!-- /Hide from NPL -->
     <th>Notes</th>
 	<th>&nbsp;</th>
   </tr>
@@ -23,18 +25,20 @@
     <!-- TMPL_ELSE -->
     <tr>
     <!-- /TMPL_IF -->
+		<td><!-- TMPL_VAR NAME="count" --></td>
       <td><!-- TMPL_VAR NAME="cardnumber" --> (<a href="/cgi-bin/koha/circ/circulation.pl?findborrower=<!-- TMPL_VAR NAME="cardnumber" -->" title="Issue to this Patron">Issue</a>)</td>
       <td><a class="searchresults" href="/cgi-bin/koha/members/moremember.pl?bornum=<!-- TMPL_VAR NAME="borrowernumber" -->"><!-- TMPL_VAR NAME="surname" -->, <!-- TMPL_VAR NAME="firstname" --></a> </td>
       <td><!-- TMPL_VAR NAME="categorycode" --></td>
       <td><!-- TMPL_VAR NAME="streetaddress" --> <!-- TMPL_VAR NAME=city --></td>
       <td><!-- TMPL_VAR NAME="odissue" --></td>
-<!--       <td><!-- TMPL_VAR NAME="fines" --></td> -->
+		<!-- Hide from NPL --><td><!-- TMPL_VAR NAME="fines" --></td><!-- /Hide from NPL -->
       <td><div class="notes"><!-- TMPL_VAR NAME="borrowernotes" --></div></td>
 	  <td><a href="/cgi-bin/koha/members/memberentry.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;modify=edit">Edit</a></td>
     </tr>
   <!-- /TMPL_LOOP -->
   <!-- TMPL_ELSE --><td colspan="6">No results found</td><!-- /TMPL_IF -->
-</table></div>
+</table>
+
 <div class="tabitem"><form action="/cgi-bin/koha/members/memberentry.pl" method="post"><input type="hidden" name="categorycode" value="" /><input type="hidden" name="actionType" value="Add" />
 	<input type="submit" class="submit" value="Add New Patron" /></form>
 	<form action="/cgi-bin/koha/members/memberentry.pl" method="post"><input type="hidden" name="categorycode" value="I" /><input type="hidden" name="actionType" value="Add" /><input type="submit" class="submit" value="Add New Institution" /></form>
