--- a/koha-tmpl/intranet-tmpl/default/de/bull/receipt-search-result.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/bull/receipt-search-result.tmpl
@@ -26,7 +26,7 @@
 			<tr>
 				<th class="authority">Serie</th>
 				<th class="authority">Zeige</th>
-				<th class="authority">State of collection</th>
+				<th class="authority">Bestandsstatus</th>
 				<th class="authority">L&ouml;schen</th>
 			</tr>
 			<!-- TMPL_LOOP name="result" -->
