--- a/koha-tmpl/intranet-tmpl/default/de/bull/search.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/bull/search.tmpl
@@ -29,7 +29,7 @@
 			<select name="orderby" size="1">
 				<option value="biblio.title">Titel</option>
 				<option value="biblio.author">Verfasser</option>
-				<option value="biblioitems.dewey">Dewey</option>
+				<option value="biblioitems.dewey">Klassifikation</option>
 				<option value="biblioitems.publicationyear">Erscheinungsjahr</option>
 				<option value="biblioitems.publishercode">Verlag</option>
 			</select>
