--- a/koha-tmpl/intranet-tmpl/default/de/bull/searchresultlist.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/bull/searchresultlist.tmpl
@@ -1,6 +1,6 @@
 <!-- TMPL_INCLUDE NAME="auth-top.inc" -->
 <div id="mainbloc">
-	<h1 class="authority">Authority Suchergebnisse</h1>
+	<h1 class="authority">Autorit&auml;ten Suchergebnisse</h1>
 	<div id="resultnumber">
 		<p>
 			<!-- TMPL_IF NAME=displayprev -->
