--- a/koha-tmpl/intranet-tmpl/default/de/bull/serial-issues.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/bull/serial-issues.tmpl
@@ -6,7 +6,7 @@
 <form method="post" name="f">
 <div id="bloc25">
 	<h2 class="catalogue">Abo-Informationen</h2>
-		<p>f&uuml;r <b><!-- TMPL_VAR name="bibliotitle" --></b>, abboniert seit <b><!-- TMPL_VAR name="startdate" --></b>, erscheint <b>
+		<p>f&uuml;r <b><!-- TMPL_VAR name="bibliotitle" --></b>, abonniert seit <b><!-- TMPL_VAR name="startdate" --></b>, erscheint <b>
 		<!--TMPL_IF name="periodicity1" -->
 				t&auml;glich
 		<!-- /TMPL_IF -->
