--- a/koha-tmpl/intranet-tmpl/default/de/bull/subscription-add.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/bull/subscription-add.tmpl
@@ -20,8 +20,8 @@
 		<p><label>Bemerkung</label><textarea name="notes" cols="30" rows="2"><!-- TMPL_VAR name="notes" --></textarea></p>
 		<p class="problem">Warnung</p>
 		<ul>
-			<li>Denken Sie daran, dass vor dem Anlegen eines Abos ein Biblio angelegt werden muss</li>
-			<li>Ebenfalls m&uuml;ssen Sie einen Lieferanten ausgew&auml;hlt haben, wenn Sie versp&auml;tete Lieferungen sehen wollen</li>
+			<li>Denken Sie daran, dass vor dem Anlegen eines Abos ein Biblio angelegt werden muss.</li>
+			<li>Ebenfalls m&uuml;ssen Sie einen Lieferanten ausgew&auml;hlt haben, wenn Sie versp&auml;tete Lieferungen anzeigen wollen.</li>
 		</ul>
 </div>
 <div id="bloc25">
@@ -147,7 +147,7 @@ function Plugin(f)
 
 function FindAcqui(f)
 {
-	 window.open("acqui-search.pl","Find a supplier",'width=500,height=400,toolbar=false,scrollbars=yes');
+	 window.open("acqui-search.pl","Lieferanten finden",'width=500,height=400,toolbar=false,scrollbars=yes');
 }
 
 
