--- a/koha-tmpl/intranet-tmpl/default/de/bull/subscription-detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/bull/subscription-detail.tmpl
@@ -13,7 +13,7 @@
 	<h2 class="bull">Abo-Informationen</h2>
 		<p><label>Bibliothekar</label><!-- TMPL_VAR name="librarian" --></p>
 		<p><label>Lieferant</label><!-- TMPL_VAR name="aqbooksellername" --></p>
-		<p><label>Cost</label><!-- TMPL_VAR name="cost" --></p>
+		<p><label>Preis</label><!-- TMPL_VAR name="cost" --></p>
 		<p><label>Etat</label><!-- TMPL_VAR name="bookfundid" --></p>
 		<p><label>Biblio</label><i>(<!-- TMPL_VAR name="biblionumber" -->)</i> <!-- TMPL_VAR name="bibliotitle" --></p>
 		<p><label>Bemerkung</label><!-- TMPL_VAR name="notes" --></p>
@@ -54,7 +54,7 @@
 <div id="bloc25">
 	<h2 class="bull">Generierung der Inventarnummern</h2>
 	<p>
-		<p>Nummerierungs-Formel: <!-- TMPL_VAR name="numberingmethod" --></p>
+		<p>Nummerierungsformel: <!-- TMPL_VAR name="numberingmethod" --></p>
 		<table class="small" width="20%">
 			<tr>
 				<th class="bull">&nbsp;</th>
