--- a/koha-tmpl/intranet-tmpl/default/en/parameters/aqbudget.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/parameters/aqbudget.tmpl
@@ -125,6 +125,11 @@
 		<p>
 			<label class="label100">Budget amount</label><input type="text" name="budgetamount" value="<!-- TMPL_VAR NAME="budgetamount" -->">
 		</p>
+		<p>
+			<label class="label100">Branch</label><!--TMPL_VAR Name="CGIbranch" -->
+			<br/> If budget is specifically allowed to a branch, select it here, otherwise leave it empty .
+		</p>
+		
 		<p><input type="hidden" name="aqbudgetid" value="<!-- TMPL_VAR NAME="aqbudgetid" -->"><input type="button" value="OK" onclick="Check(this.form)" class="button"></p>
 		</form>
 	</div>
