--- a/koha-tmpl/opac-tmpl/npl/en/opac-reserve.tmpl
+++ b/koha-tmpl/opac-tmpl/npl/en/opac-reserve.tmpl
@@ -9,7 +9,9 @@
 <p class="error">
 <!-- TMPL_IF NAME="too_much_oweing" -->Sorry, you cannot make reserves because you owe <!-- TMPL_VAR NAME="too_much_oweing" -->.  <!-- /TMPL_IF -->
 <!-- TMPL_IF NAME="too_many_reserves" -->Sorry, you cannot make more than <!-- TMPL_VAR NAME="too_many_reserves" --> reserves. <!-- /TMPL_IF -->
-<!-- TMPL_IF NAME="already_reserved" -->You already have a reserve placed on this item.<!-- /TMPL_IF -->
+<!-- TMPL_IF NAME="already_reserved" -->You already have a reserve placed on this item.
+<form action="opac-detail.pl" method="get"><input type="hidden" name="bib" value="<!-- TMPL_VAR NAME="biblionumber" -->" /><input type="submit" class="icon back" value="Return to Item Detail Screen" /></form>
+<!-- /TMPL_IF -->
 <!-- TMPL_IF NAME="no_items_selected" -->You must select at least one item.<!-- /TMPL_IF -->
 	<!-- TMPL_IF NAME="no_branch_selected" -->You must select a branch for pickup!<!-- /TMPL_IF -->
 </p>
@@ -23,13 +25,15 @@
 <input type="hidden" name="item_types_selected" value="1">
 <input type="hidden" name="bib" value="<!-- TMPL_VAR NAME="biblionumber" -->">
 <h2>Reservation Details</h2>
-
 <div class="form">
 <table>
    <tr><th>Reserving: </th><td><span class="title"><!-- TMPL_VAR NAME="title" --></span><!-- TMPL_IF NAME="author" --> (<!-- TMPL_VAR NAME="author" -->)<!-- /TMPL_IF --></td></tr>
     <tr><th>For:</th><td><!-- TMPL_LOOP NAME="USER_INFO" --><!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --> (<!-- TMPL_VAR NAME="cardnumber" -->)<!-- /TMPL_LOOP --></td></tr>
 
-    <tr><th>Pick up from:</th><td><!-- TMPL_VAR NAME="CGIbranch" --></td></tr>
+    <tr><th>Pick up from:</th><td><select name="branch" id="branch">
+		<option>-- Please choose your branch --</option>
+		<!-- TMPL_LOOP NAME="CGIbranch" --><option value="<!-- TMPL_VAR NAME="value" -->"><!-- TMPL_VAR NAME="branch" --></option><!-- /TMPL_LOOP -->
+</select></td></tr>
 </table>
 
 <!-- TMPL_IF NAME="onlyone" -->
