--- a/koha-tmpl/opac-tmpl/npl/en/opac-suggestions.tmpl
+++ b/koha-tmpl/opac-tmpl/npl/en/opac-suggestions.tmpl
@@ -1,31 +1,32 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" --><!-- TMPL_VAR NAME="LibraryName" --> Catalog -- 
-<!-- TMPL_IF name="op_add" -->Enter a new suggestion<!-- /TMPL_IF -->
-<!-- TMPL_IF name="op_else" -->Suggestions<!-- /TMPL_IF -->
+<!-- TMPL_IF name="op_add" -->Enter a new purchase suggestion<!-- /TMPL_IF -->
+<!-- TMPL_IF name="op_else" -->Purchase Suggestions<!-- /TMPL_IF -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!--TMPL_INCLUDE NAME="masthead.inc" -->
 <!--TMPL_INCLUDE NAME="navigation.inc" -->
 
 <div id="main">
 <!-- TMPL_IF name="op_add" -->
-	<h1>Enter a new suggestion</h1>
+	<h1>Enter a new purchase suggestion</h1>
 	<div class="details">
-	<p>Fill this form to suggest the library a new acquisition. You will be emailed when the library processes your suggestion</p>
+	<p>Fill this form to suggest the library a new acquisition. You will be emailed when the library processes your purchase suggestion</p>
 	<p>No fields are mandatory. Enter whatever information you have. The "Notes" field can be used to provide any additional information.</p>
 	<form>
 	<table>
-	<tr><th><label>Title</label></th><td><input type="text" name="title" size="50" maxlentgh="80"></td></tr>
-	<tr><th><label>Author</label></th><td><input type="text" name="author" size="50" maxlength="80"></td></tr>
-	<tr><th><label>Copyright date</label></th><td><input type="text" name="copyrightdate" size="4" maxlength="4"></td></tr>
-	<tr><th><label>Publisher</label></th><td><input type="text" name="publishercode" size="50" maxlength="80"></td></tr>
+	<tr><th><label>Title</label></th><td><input type="text" name="title" size="50" maxlentgh="80" /></td></tr>
+	<tr><th><label>Author</label></th><td><input type="text" name="author" size="50" maxlength="80" /></td></tr>
+	<tr><th><label>Copyright date</label></th><td><input type="text" name="copyrightdate" size="4" maxlength="4" /></td></tr>
+	<tr><th><label>Publisher</label></th><td><input type="text" name="publishercode" size="50" maxlength="80" /></td></tr>
 	<tr><th><label>Notes</label></th><td><textarea name="note" rows="5" cols="40"></textarea></td></tr>
 	</table>
-		<p><input type="hidden" name="op" value="add_confirm"><input type="submit" value="Submit Your Suggestion" class="submit"></p>
+		<p><input type="hidden" name="op" value="add_confirm" /><input type="submit" value="Submit Your Suggestion" class="submit" /></p>
 	</form>
 	</div>
 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF name="op_else" -->
-	<h1>Suggestions</h1>
+	<h1>Purchase Suggestions</h1>
+	<!-- TMPL_IF NAME="suggestions_loop" -->
 	<table>
 		<tr>
 			<th>&nbsp;</th>
@@ -44,23 +45,23 @@
 					Filter on
 				</th>
 				<th>
-					<input type="text" name="title" value="<!-- TMPL_VAR name="title"-->">
+					<input type="text" name="title" value="<!-- TMPL_VAR name="title"-->" />
 				</th>
 				<th>
-					<input type="text" name="author" value="<!-- TMPL_VAR name="author" -->">
+					<input type="text" name="author" value="<!-- TMPL_VAR name="author" -->" />
 				</th>
 				<th>
 					&nbsp;
 				</th>
 				<th>
-					<input type="text" name="publishercode" value="<!-- TMPL_VAR name="publishercode"-->">
+					<input type="text" name="publishercode" value="<!-- TMPL_VAR name="publishercode"-->" />
 				</th>
 				<th>
 					<select name="status">
 						<option value="">Any</option>
-						<option value="ASKED" <!-- TMPL_IF name="ASKED" -->selected<!-- /TMPL_IF -->>Asked</option>
+						<option value="ASKED" <!-- TMPL_IF name="ASKED" -->selected<!-- /TMPL_IF -->>Requested</option>
 						<option value="ORDERED" <!-- TMPL_IF name="ORDERED" -->selected<!-- /TMPL_IF -->>Ordered</option>
-						<option value="REJECTED"<!-- TMPL_IF name="REJECTED" -->selected<!-- /TMPL_IF -->>Rejected</option>
+						<option value="REJECTED"<!-- TMPL_IF name="REJECTED" -->selected<!-- /TMPL_IF -->>Declined</option>
 						<option value="AVAILABLE"<!-- TMPL_IF name="AVAILABLE" -->selected<!-- /TMPL_IF -->>Available</option>
 					</select>
 				</th>
@@ -74,51 +75,50 @@
 					&nbsp;
 				</th>
 				<th>
-					<input type="submit" class="submit" value="Set Filter">
+					<input type="submit" class="submit" value="Set Filter" />
 				</th>
 			</form>
 		</tr>
 		<form>
-			<input type="hidden" name="op" value="delete_confirm">
+			<input type="hidden" name="op" value="delete_confirm" />
 		<!-- TMPL_LOOP NAME="suggestions_loop" -->
-			<tr>
+			<!-- TMPL_IF name="even" --><tr><!-- TMPL_ELSE --><tr class="highlight"><!-- /TMPL_IF -->
 				<td>
-					<input type="checkbox" name="delete_field" value="<!--TMPL_VAR name="suggestionnumber" -->">
+					<input type="checkbox" name="delete_field" value="<!--TMPL_VAR name="suggestionid" -->" />
 				</td>
-				<td <!-- TMPL_IF name="even" -->class="hilighted"<!-- /TMPL_IF -->>
+				<td>
 					<!-- TMPL_VAR NAME="title" -->
 				</td>
-				<td <!-- TMPL_IF name="even" -->class="hilighted"<!-- /TMPL_IF -->>
+				<td>
 					<!-- TMPL_VAR NAME="author" -->
 				</td>
-				<td align="center"<!-- TMPL_IF name="even" --> class="hilighted"<!-- /TMPL_IF -->>
+				<td>
 					<!-- TMPL_VAR NAME="copyrightdate" -->
 				</td>
-				<td align="center" <!-- TMPL_IF name="even" --> class="hilighted"<!-- /TMPL_IF -->>
+				<td>
 					<!-- TMPL_VAR name="publishercode" -->
 				</td>
-				<td <!-- TMPL_IF name="even" -->class="hilighted"<!-- /TMPL_IF -->>
-					<!-- TMPL_IF name="ASKED" -->Asked<!-- /TMPL_IF -->
+				<td>
+					<!-- TMPL_IF name="ASKED" -->Requested<!-- /TMPL_IF -->
 					<!-- TMPL_IF name="ORDERED" -->Ordered by the library<!-- /TMPL_IF -->
-					<!-- TMPL_IF name="REJECTED" -->Suggestion rejected : won't be buy<!-- /TMPL_IF -->
+					<!-- TMPL_IF name="REJECTED" -->Suggestion declined<!-- /TMPL_IF -->
 					<!-- TMPL_IF name="AVAILABLE" -->Available in the library<!-- /TMPL_IF -->
 				</td>
-				<td <!-- TMPL_IF name="even" -->class="hilighted"<!-- /TMPL_IF -->>
+				<td>
 					<!-- TMPL_VAR name="surnamesuggestedby" --><!-- TMPL_IF name="firstnamesuggestedby" -->,<!-- /TMPL_IF --> <!-- TMPL_VAR name="firstnamesuggestedby" -->
 				</td>
-				<td <!-- TMPL_IF name="even" -->class="hilighted"<!-- /TMPL_IF -->>
+				<td>
 					<!-- TMPL_VAR name="usermanagedby" --><!-- TMPL_IF name="firstnamemanagedby" -->,<!-- /TMPL_IF --> <!-- TMPL_VAR name="firstnamemanagedby" -->
 				</td>
-				<td <!-- TMPL_IF name="even" -->class="hilighted"<!-- /TMPL_IF -->>
+				<td>
 					<!-- TMPL_VAR name="note" -->
 				</td>
 			</tr>
 		<!-- /TMPL_LOOP -->
 		<tr>
-			<td>
-				<input type="submit" class="submit" value="Delete">
+			<td colspan="2">
+				<input type="submit" class="icon delete" value="Delete Checked Items" />
 			</td>
-			<td> &nbsp; </td>
 			<td> &nbsp; </td>
 			<td> &nbsp; </td>
 			<td> &nbsp; </td>
@@ -129,11 +129,12 @@
 		</tr>
 		</form>
 	</table>
+	<!-- TMPL_ELSE --><div class="content-block">There are no pending purchase suggestions</div><!-- /TMPL_IF -->
 	<form>
-		<input type="hidden" name="op" value="add">
-		<input type="submit" class="submit" value="Enter a new suggestion">
+		<input type="hidden" name="op" value="add" />
+		<input type="submit" class="icon add" value="Enter a new purchase suggestion" />
 	<br />
-	<p>Note : if you're viewing suggestions submitted by anybody, the results will contain only <em>new</em> suggestions. Suggestions being processed by a librarian will not be shown.</p>
+	<p>Note : if you're viewing purchase suggestions submitted by anybody, the results will contain only <em>new</em> purchase suggestions. Suggestions being processed by a librarian will not be shown.</p>
 <!-- /TMPL_IF -->
 </div>
 </body>
