--- a/koha-tmpl/opac-tmpl/npl/en/opac-searchresults.tmpl
+++ b/koha-tmpl/opac-tmpl/npl/en/opac-searchresults.tmpl
@@ -4,6 +4,11 @@
 <!--TMPL_INCLUDE NAME="navigation.inc" -->
 
 <div id="main">
+<div class="further">
+<h4>Try Your Search In:</h4>
+<ul><!-- Display for NPL //<li><a href="http://search3.webfeat.org/cgi-bin/webfeat.dll?Command=Search&BypassSessData=yes&noserial=1&Databases=wf_sirsdiscover,wf_elibrary2_e,wf_ebonline,wf_healthsourceconsumer,wf_masterfileprem,wf_newspapersource&wf_cat=0&Client_ID=oplin&wf_all_years=yes&wf_field1=wf_keyword&wf_term1=<!-- TMPL_VAR NAME="phraseorterm" ESCAPE="URL" -->&rurl=http%3A//www.oplin.org/&wut_code=OH0156">Local Databases (OPLIN)</a></li> //Display for NPL --><li><a href="http://www.google.com/search?q=<!-- TMPL_VAR NAME="phraseorterm" ESCAPE="URL" -->+site:worldcatlibraries.org">Other Libraries(WorldCat)</a></li>
+<li><a href="http://www.scholar.google.com/scholar?q=<!-- TMPL_VAR NAME="phraseorterm" ESCAPE="URL" -->">Other Databases (Google Scholar)</a></li></ul></div>
+
 <!-- TMPL_IF NAME="searchdesc" -->
     <h3>Results for Search: <span class="ex"><!-- TMPL_VAR NAME="searchdesc" --></span></h3>
 <!-- TMPL_ELSE -->
@@ -38,7 +43,7 @@
 <input type="submit" class="icon addchecked" value="Add Checked Items to Book Bag" onclick="addMultiple(); return false;"> <input type="reset" value="Clear All" class="icon clearall">
 	<table>
 		<tr>
-			<th colspan="3">Title</th>
+			<th colspan="2">Title</th>
 			<th>Author</th>
 			<th>Call Number</th>
 			<th>Copies</th>
@@ -47,8 +52,8 @@
 		<!-- Actual Search Results -->
 		<!-- TMPL_LOOP NAME="results" -->
 			<tr<!-- TMPL_IF name="even" --> class="highlight"<!-- /TMPL_IF -->>
-			<td><input type="checkbox" name="bibid" value="<!-- TMPL_VAR NAME="bibid" -->"></td>
-			 <td><img src="<!-- TMPL_VAR NAME="themelang" -->/images/<!-- TMPL_VAR NAME="itemtype" -->.gif" alt="<!-- TMPL_VAR NAME="itemtype" -->" title="<!-- TMPL_VAR NAME="itemtype" -->" /></td>
+			<td><label for="bib<!-- TMPL_VAR NAME="biblionumber" -->"><img src="<!-- TMPL_VAR NAME="themelang" -->/images/<!-- TMPL_VAR NAME="itemtype" -->.gif" alt="<!-- TMPL_VAR NAME="itemtype" -->" title="<!-- TMPL_VAR NAME="itemtype" -->" /></label><br /><input type="checkbox" name="bibid" id="bib<!-- TMPL_VAR NAME="biblionumber" -->" value="<!-- TMPL_VAR NAME="biblionumber" -->" /></td>
+
 				<td><!-- TMPL_IF name="BiblioDefaultViewmarc" --><a href="/cgi-bin/koha/opac-MARCdetail.pl?bib=<!-- TMPL_VAR NAME="biblionumber" ESCAPE="URL" -->"><!-- TMPL_VAR NAME="title" --> <!-- TMPL_VAR NAME="subtitle" --></a><!-- TMPL_ELSE --><!-- TMPL_IF name="BiblioDefaultViewisbd" --><a href="/cgi-bin/koha/opac-ISBDdetail.pl?bib=<!-- TMPL_VAR NAME="biblionumber" ESCAPE="URL" -->"><!-- TMPL_VAR NAME="title" --> <!-- TMPL_VAR NAME="subtitle" --></a><!-- TMPL_ELSE --><a href="/cgi-bin/koha/opac-detail.pl?bib=<!-- TMPL_VAR NAME="biblionumber" ESCAPE="URL" -->"><!-- TMPL_VAR NAME="title" --> <!-- TMPL_VAR NAME="subtitle" --></a><!-- /TMPL_IF --><!-- /TMPL_IF -->				
 			 <!-- TMPL_IF name="publicationyear" --> - <!-- TMPL_VAR name="publicationyear" --><!-- /TMPL_IF -->
 						<!-- TMPL_IF name="publishercode" -->- <!-- TMPL_VAR name="publishercode" --><!-- /TMPL_IF -->
@@ -77,22 +82,30 @@
 				<a class="nav" href="opac-search.pl?startfrom=<!-- TMPL_VAR NAME="startfromnext" -->&amp;<!-- TMPL_LOOP NAME=searchdata --><!-- TMPL_VAR NAME="term" -->=<!-- TMPL_VAR name="val" ESCAPE=URL -->&amp;<!-- /TMPL_LOOP -->&amp;resultsperpage=<!-- TMPL_VAR NAME="resultsperpage" -->&amp;orderby=<!-- TMPL_VAR NAME="orderby" -->&amp;type=intranet&amp;op=do_search">Next &gt;&gt;</a>
 				<!-- /TMPL_IF --></div>
 
-<!-- Display for NPL 
-	<div class="note">
-Not finding what you're looking for?<br />  Make a <a href="http://www.athenscounty.lib.oh.us/ipage.html">
-purchase suggestion</a>
-</div>
- /Display for NPL -->
+<!-- Display for NPL <div class="note">Not finding what you're looking for?<br />  Make a <a href="http://www.athenscounty.lib.oh.us/ipage.html">
+purchase suggestion</a><a href="http://www.athenscounty.lib.oh.us/ipage.html">purchase suggestion</a></div> /Display for NPL -->
+
+<!-- Hide from NPL -->
+<!-- TMPL_IF name="suggestion" -->
+<div class="note">Not finding what you're looking for?<br />  Make a <a href="opac-suggestions.pl?op=add">purchase suggestion</a></div>
+<!-- /TMPL_IF -->
+<!-- /Hide from NPL -->
+
 </div> 
 
 
 
 <!-- TMPL_ELSE -->
 Sorry, there were no results.
-<!-- Display for NPL 	<div class="note">
-Not finding what you're looking for?<br />  Make a <a href="http://www.athenscounty.lib.oh.us/ipage.html">
-purchase suggestion</a>
-</div> /Display for NPL -->
+<!-- Display for NPL <div class="note">Not finding what you're looking for?<br />  Make a <a href="http://www.athenscounty.lib.oh.us/ipage.html">
+purchase suggestion</a><a href="http://www.athenscounty.lib.oh.us/ipage.html">purchase suggestion</a></div> /Display for NPL -->
+
+<!-- Hide from NPL -->
+<!-- TMPL_IF name="suggestion" -->
+<div class="note">Not finding what you're looking for?<br />  Make a <a href="opac-suggestions.pl?op=add">purchase suggestion</a></div>
+<!-- /TMPL_IF -->
+<!-- /Hide from NPL -->
+
 <!-- /TMPL_IF -->
 </div>
 </body>
