Synching with rel_2_2.

--- a/koha-tmpl/opac-tmpl/npl/en/includes/opac.css
+++ b/koha-tmpl/opac-tmpl/npl/en/includes/opac.css
@@ -296,6 +296,17 @@ th:last-child {
 	padding : 5px 5px 5px 5px;
 }
 
+th[scope="row"] {
+	background-color : #E7E7CA;
+	font-size : 60%;
+	font-weight : normal;
+	text-align : right;
+}
+
+tr.highlight th[scope="row"] {
+	background-color : #EFF1DC;
+}
+
 td.input, div.form td, div.details td {
 	border-bottom : 1px solid #E7E7CA;
 	border-left : 0;
